# sac

./: .gitignore  CMakeLists.txt  README.md  TODO  dependencies  install.sh  issues  slides
src/: Makefile  build.c  build.h  injected-code.c  main.c  patch-func.c  patch-func.h
src/python-module/: build.py  buildUtils.py  families.py  gdbUtils.py  libInjection.py  linkMap.py  listener.py  notifier.py  patchSymbols.py  readSymbols.py  sac.py
tests/: Makefile  TODO  link_map.c  test  test.c
tests/files/: Makefile  a.c  a.h  b.c  b.h  main.c
tests/function/: Makefile  builds.sac  function  function.c
tests/link_map/: Makefile  link_map.c
tests/mprotect/: Makefile  test.c
tests/patch/: Makefile  test.c
